Enhance error handling, validation, and security features
- Improved error handling in errorHandler middleware with user-friendly messages and error ID tracking.
- Added validation middleware for various routes, including authentication and playlist operations.
- Implemented rate limiting for authentication attempts and Spotify API requests.
- Introduced secure token handling methods in the User model for access and refresh tokens.
- Enhanced Spotify authentication flow with state management to prevent CSRF attacks.
- Added encryption utility for securely storing sensitive data like tokens.
- Updated API services to handle authentication errors and clear auth state when necessary.
- Refactored playlist routes to include validation and improved error handling.
- Modified PlaylistCard component to correctly format duration in milliseconds.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,13 @@ SPOTIFY_REDIRECT_URI=http://localhost:3000/auth/callback
 
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/spotyme
+# For Docker deployment:
+MONGO_ROOT_USERNAME=admin
+MONGO_ROOT_PASSWORD=your_secure_mongo_password_here
+MONGO_DATABASE=spotyme
+# Mongo Express credentials
+MONGO_EXPRESS_USERNAME=admin
+MONGO_EXPRESS_PASSWORD=your_secure_express_password_here
 
 # Session Configuration
 SESSION_SECRET=your_session_secret_here
@@ -19,3 +26,11 @@ JWT_EXPIRY=7d
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:8081
+
+# OpenAI Configuration (for AI-based recommendations)
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+
+# Encryption Configuration
+# Generate a secure key: openssl rand -hex 32
+ENCRYPTION_KEY=your_32_character_or_longer_encryption_key_here
